# research-domain-writing

./: .gitignore  .pre-cr.json  .zenodo.json  CHANGELOG.md  CITATION.cff  PROJECT.md  README.md  RELEASE.md  RESEARCH_READY.md  SKILL.md  pyproject.toml
.agents/context/: README.md  market.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-qr-remediation-research-domain-writing/: 01-01-PLAN.md  01-CONTEXT.md
.tracker/: PROJECT_TRUTH.md
config/: output-formats.yaml  router-inference.yaml
docs/: FUTURE-AIOS-INTEGRATION.md  LIMITATIONS.md
docs/architecture/: ADR-001-provider-neutral-adapter-contract.md  ADR-002-packet-lineage-and-conflict-resolution.md  ADR-003-evidence-aware-diff-qa-regression-contract.md  ADR-004-bounded-batch-executor-semantics.md  ADR-005-first-mature-domain-pack.md
docs/modernization/: AUDIT.md  EXEC_PLAN.md  PROGRESS.md  TARGET.md
docs/release-notes/: v0.1.0.md
docs/superpowers/plans/: 2026-07-05-rdw-v0.2-hardening.md
docs/superpowers/specs/: 2026-07-05-rdw-v0.2-hardening-design.md  2026-07-07-rdw-v0.3-workflow-design.md
domains/_template/: jargon-template.md  research-packet-template.yaml
domains/basketball/: qa-checklist.md  research-packet-template.yaml  writing-templates.md
domains/music/: qa-checklist.md
domains/technical/: research-packet-template.yaml
examples/: batch-tasks.yaml
examples/basketball-example/: draft.md  final.md  knowledge-packet.md  qa-output.yaml  task.yaml
examples/fixtures/: basketball-acceptance-ranking.yaml  basketball-vertical-slice-qa-failed-output.yaml  basketball-vertical-slice-qa-failed.yaml  basketball-vertical-slice-rejected.yaml  basketball-vertical-slice.yaml
examples/music-example/: draft.md  final.md  qa-output.yaml
examples/technical-example/: draft.md  final.md  research-packet.yaml  task.yaml
install/: install.sh
install/claude-commands/: rdw-batch.md
knowledge/basketball/: jalen-brunson-2024-25.yaml
prompts/: batch-runner.md  domain-qa.md  pipeline-orchestrator.md  researcher.md
scripts/: new-domain.sh  publish-pypi-wizard.sh  run-pre-cr-python-tests.py  smoke-install.py  sync-package-assets.py  validate-packet.py
skills/research-domain-writing/: SKILL.md
src/rdw/: __init__.py  batch_events.py  batch_execution.py  batch_leases.py  batch_models.py  batch_projection.py  batch_support.py  cli.py  config.py  contracts.py  domain.py  execution.py  install.py  io.py  lifecycle.py  mature_validation.py  planner.py  resources.py  router.py  schema_export.py  validation.py  yaml_io.py
src/rdw/adapters/: __init__.py  (+3 more)
tests/: test_basketball_acceptance.py  test_batch_execution.py  test_fixture_execution.py  test_golden.py  test_rdw_contract.py  test_rdw_workflow.py  test_sync_package_assets.py
(+114 files in other folders)
