[project]
name = "research-domain-writing"
version = "0.1.0"
description = "Research-grounded domain writing pipeline prompts, domain packs, packet validation, and agent skill distribution."
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.12"
include = ["scripts", "tests"]
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
